--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "npm": ">=8.0.0 <10.0.0"
   },
   "dependencies": {
-    "@nguniversal/express-engine": "16.1.0",
+    "@nguniversal/express-engine": "^16.2.0",
     "domino": "^2.1.4",
     "express": "4.18.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.1.0",
-    "@angular-eslint/builder": "16.0.3",
+    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular-eslint/builder": "^16.3.1",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
-    "@angular-eslint/schematics": "16.0.3",
+    "@angular-eslint/schematics": "^16.3.1",
     "@angular-eslint/template-parser": "16.0.3",
     "@angular/animations": "16.1.1",
     "@angular/cdk": "^16.2.1",
-    "@angular/cli": "16.1.0",
+    "@angular/cli": "^16.2.12",
     "@angular/common": "16.1.1",
     "@angular/compiler": "16.1.1",
     "@angular/compiler-cli": "16.1.1",
@@ -50,13 +50,13 @@
     "@angular/platform-server": "16.1.1",
     "@angular/router": "16.1.1",
     "@angular/youtube-player": "^16.1.1",
-    "@commitlint/cli": "^16.2.1",
+    "@commitlint/cli": "^19.0.3",
     "@commitlint/config-angular": "^17.6.6",
     "@commitlint/config-conventional": "^16.2.1",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@ng-select/ng-select": "11.0.0",
     "@ngneat/transloco": "^3.1.4",
-    "@nguniversal/builders": "16.1.0",
+    "@nguniversal/builders": "^16.2.0",
     "@popperjs/core": "^2.11.4",
     "@types/express": "4.17.17",
     "@types/jasmine": "4.3.4",
@@ -67,7 +67,7 @@
     "@typescript-eslint/parser": "5.60.0",
     "bootstrap": "5.3.0",
     "classlist.js": "^1.1.20150312",
-    "commitlint": "^16.2.1",
+    "commitlint": "^19.0.3",
     "eslint": "^8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -92,9 +92,10 @@
     "ng-recaptcha": "^12.0.0",
     "ngx-scrollbar": "^13.0.3",
     "prettier": "^2.5.1",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "rxjs": "7.8.1",
-    "sass-loader": "^13.3.2",
+    "sass": "^1.71.1",
+    "sass-loader": "^10.5.2",
     "smoothscroll-polyfill": "^0.4.4",
     "ts-node": "~7.0.0",
     "tslib": "2.5.3",
